updating latest changes...

--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -10,6 +10,7 @@
 
 <link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<link rel="stylesheet" href="assets/angular-aside/css/angular-aside.min.css" />
 
 <link rel="stylesheet" href="assets/style-1.css" />
 <link rel="stylesheet" href="assets/style-0.css" />
@@ -29,7 +30,6 @@
 	<x-bread-crumb-directive></x-bread-crumb-directive>
 
 </header>
-
 
 <bootstrap-notify-directive></bootstrap-notify-directive>
 
@@ -74,6 +74,8 @@
 	src="assets/inputmask/jquery.inputmask.bundle.min.js"></script>
 <script type="text/javascript" 
 	src="assets/inputmask/green.inputmask4angular.js"></script>
+<script type="text/javascript" 
+	src="assets/angular-aside/js/angular-aside.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
 <script type="text/javascript" src="modules/zgeneral/bootstrapNotify.js"></script>
@@ -86,6 +88,7 @@
 <script type="text/javascript" src="modules/user/userService.js"></script>
 <script type="text/javascript" src="modules/user/userController.js"></script>
 
+<script type="text/javascript" src="modules/home/homeController.js"></script>
 <script type="text/javascript" src="modules/home/indexController.js"></script>
 
 <script type="text/javascript" src="modules/session/settingController.js"></script>
