--- a/src/main/webapp/index-g.html
+++ b/src/main/webapp/index-g.html
@@ -23,13 +23,10 @@
 	<div class="col-md-2 text-center">
 		<strong>WatchYourSales Console</strong>
 	</div>
-	<div class="col-md-5 text-center">
-		<a class="navbar-link"  href="_ah/admin/">Google Datastore</a>
-		<b> | </b>
-		<a class="navbar-link"  href="_ah/gaelyk-console/">Gaelyk Console</a>
-	</div>
-	<div class="col-md-5">
+	<div class="col-md-10 text-center">
 		<a href="index-d.html" class="btn btn-primary">Destop/Tablet</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="_ah/admin/" class="btn btn-default">Google Datastore</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="index-m.html" class="btn btn-primary">Tablet/Mobile</a>
 	</div>
