--- a/src/main/webapp/modules/zgeneral/sideBarLeft-m.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-m.html
@@ -24,7 +24,6 @@
         	<a class="list-group-item" href="#/home">
         		Home <i class="fa fa-home pull-right"></i>
         	</a>
-
         	<a class="list-group-item" href="#/counter">
         		Sales Counter
         	</a>
@@ -32,16 +31,26 @@
         		Orders
         	</a>
         	<a class="list-group-item" href="#/itemSales">
-        		Sales Transactions
+        		Sales Transactions <i class="fa fa-history pull-right"></i>
         	</a>
-			
-			<a class="list-group-item" href="#/accounts">
-				Accounts <i class="fa fa-database pull-right"></i>
-			</a>
 			<a class="list-group-item" href="#/accountTransactions">
 				Account Transactions <i class="fa fa-history pull-right"></i>
 			</a>
-			
+			<a class="list-group-item" href="#/reports">
+				Reports
+			</a>
+			<a class="list-group-item" href="#/dealers">
+				Dealers <i class="fa fa-users pull-right"></i>
+			</a>
+			<a class="list-group-item" href="#/customers">
+				Customers <i class="fa fa-users pull-right"></i>
+			</a>
+			<a class="list-group-item" href="#/accounts">
+				Accounts <i class="fa fa-database pull-right"></i>
+			</a>
+			<a class="list-group-item" href="#/users">
+				Users <i class="fa fa-users pull-right"></i>
+			</a>
 			<a class="list-group-item" href="#/signout">
 				Sign Out <i class="fa fa-sign-out pull-right"></i>
 			</a>
