--- a/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
@@ -19,8 +19,13 @@
 			</a>
 		</li>	
 		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/itemOrder')"> 
-				Orders
+			<a href="" x-ng-click="routeTo($event, '/customerOrders')"> 
+				Customer Orders
+			</a>
+		</li>	
+		<li class="list-group-item">
+			<a href="" x-ng-click="routeTo($event, '/dealerOrders')"> 
+				Dealer Orders
 			</a>
 		</li>	
 		<li class="list-group-item">
@@ -46,6 +51,11 @@
 		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/customers')"> 
 				Customers
+			</a>
+		</li>	
+		<li class="list-group-item">
+			<a href="" x-ng-click="routeTo($event, '/stocks')">
+				Stocks
 			</a>
 		</li>	
 		<li class="list-group-item">
