--- a/src/main/webapp/modules/zgeneral/sideBarLeft-m.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-m.html
@@ -27,8 +27,11 @@
         	<a class="list-group-item" href="#/counter">
         		Sales Counter
         	</a>
-        	<a class="list-group-item" href="#/itemOrder">
-        		Orders
+        	<a class="list-group-item" href="#/dealerOrders">
+        		Customer Orders
+        	</a>
+        	<a class="list-group-item" href="#/dealerOrders">
+        		Dealer Orders
         	</a>
         	<a class="list-group-item" href="#/itemSales">
         		Sales Transactions <i class="fa fa-history pull-right"></i>
@@ -45,12 +48,17 @@
 			<a class="list-group-item" href="#/customers">
 				Customers <i class="fa fa-users pull-right"></i>
 			</a>
+			<a class="list-group-item" href="#/stocks">
+				Stocks <i class="fa fa-database pull-right"></i>
+			</a>
 			<a class="list-group-item" href="#/accounts">
 				Accounts <i class="fa fa-database pull-right"></i>
 			</a>
+			<!-- 
 			<a class="list-group-item" href="#/users">
 				Users <i class="fa fa-users pull-right"></i>
 			</a>
+			-->
 			<a class="list-group-item" href="#/signout">
 				Sign Out <i class="fa fa-sign-out pull-right"></i>
 			</a>
