--- a/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
@@ -14,33 +14,8 @@
 			</a>
 		</li>	
 		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/counter')"> 
-				Sales Counter
-			</a>
-		</li>	
-		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/customerOrders')"> 
-				Customer Orders
-			</a>
-		</li>	
-		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/dealerOrders')"> 
-				Dealer Orders
-			</a>
-		</li>	
-		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/itemSales')"> 
-				Sales Transactions
-			</a>
-		</li>	
-		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/accountTransactions')"> 
-				Account Transactions
-			</a>
-		</li>	
-		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/reports')"> 
-				Reports
+			<a href="" x-ng-click="routeTo($event, '/customers')"> 
+				Customers
 			</a>
 		</li>	
 		<li class="list-group-item">
@@ -49,18 +24,23 @@
 			</a>
 		</li>	
 		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/customers')"> 
-				Customers
+			<a href="" x-ng-click="routeTo($event, '/employees')"> 
+				Employees
 			</a>
 		</li>	
 		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/stocks')">
-				Stocks
+			<a href="" x-ng-click="routeTo($event, '/items')">
+				Items
 			</a>
 		</li>	
 		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/accounts')">
 				Accounts
+			</a>
+		</li>	
+		<li class="list-group-item">
+			<a href="" x-ng-click="routeTo($event, '/agencys')">
+				Agencys
 			</a>
 		</li>	
 		<li class="list-group-item">
