--- a/src/main/webapp/modules/item/d.html
+++ b/src/main/webapp/modules/item/d.html
@@ -14,17 +14,16 @@
 	<tr>
 		<th class="text-right" width="30">#</th>
 		<th class="text-center"><small>Id</small></th>
+	   	<th class="text-center"><small>Code</small></th>
 	   	<th class="text-center"><small>Name</small></th>
-	   	<th class="text-center"><small>Value</small></th>
-	   	<th class="text-center"><small>Commision</small></th>
-	   	<th class="text-center"><small>Start Date</small></th>
-	   	<th class="text-center"><small>Auction Date</small></th>
-	   	<th class="text-center"><small>Com AccId</small></th>
-	   	<th class="text-center"><small>Itm AccId</small></th>
+	   	<th class="text-center"><small>Base Unit</small></th>
+	   	<th class="text-center"><small>Denominator</small></th>
+	   	<th class="text-center"><small>Buy Rate</small></th>
+	   	<th class="text-center"><small>Buy Percent</small></th>
+	   	<th class="text-center"><small>Sell Rate</small></th>
+	   	<th class="text-center"><small>Sell Percent</small></th>
 	   	<th class="text-center"><small>Status</small></th>
 	   	<th class="text-center"><small>Date</small></th>
-	   	<th class="text-center"><small>User</small></th>
-		<th class="text-center" width="40">&nbsp;</th>	   	
 	</tr>
 	</thead>
 	<tbody>
@@ -32,42 +31,39 @@
 		<td class="text-right" width="40">
 			{{$index+1}}
 		</td>
-		<td class="text-right">
+		<td>
 			{{item.id}}
 		</td>
-		<td class="text-left">
+		<td>
+			{{item.code}}
+		</td>
+		<td>
 			{{item.name}}
 		</td>
 		<td class="text-right">
-			{{item.value | number : 2}}
+			{{item.baseUnit}}
 		</td>
 		<td class="text-right">
-			{{item.opearatorCommision}}%
-		</td>
-		<td class="text-center" width="120">
-			{{item.startDate | date:'yyyy-MM-dd'}}
-		</td>
-		<td class="text-center" width="120">
-			{{item.auctionDate | date:'yyyy-MM-dd'}}
+			{{item.denominator}}
+		</td>	
+		<td class="text-right">
+			{{item.buyRate}}
 		</td>
 		<td class="text-right">
-			{{item.commisionAccountId}}
+			{{item.buyPercent}}
 		</td>
 		<td class="text-right">
-			{{item.itemAccountId}}
+			{{item.sellRate}}
+		</td>
+		<td class="text-right">
+			{{item.sellPercent}}
 		</td>
 		<td>
 			{{item.status}}
 		</td>
-		<td class="text-center" width="160">
+		<td width="160">
 			{{item.updateTime | date:'yyyy-MM-dd HH:mm:ss'}}
 		</td>
-		<td>
-			{{item.userId}}
-		</td>
-		<td width="40">
-			&nbsp;
-		</td>	
 	</tr>
 	</tbody>
 	<tfoot x-ng-show="searchResults.hasItems">
