--- a/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
+++ b/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
@@ -10,7 +10,7 @@
 		<a class="navbar-brand" href="index.html">WatchYourSales</a>
 	</div>
 	<div class="navbar-collapse collapse">
-		<form class="navbar-form navbar-left" x-ng-show="isLoggedIn">
+		<form class="navbar-form navbar-left" x-ng-show="true">
 			<button class="btn btn-default" x-ng-click="showLeftMenu()">
 				<i class="fa fa-bars"></i>&nbsp;
 			</button>
