updating latest changes...

--- a/src/main/webapp/modules/item/m.html
+++ b/src/main/webapp/modules/item/m.html
@@ -5,7 +5,7 @@
 <div class="scrollable">
 
   	<div class="section scrollable-header">
-  		<a href="#/items/0" class="btn btn-default pull-right">
+  		<a href="" class="btn btn-default pull-right">
   			<i class="fa fa-plus"></i> New
   		</a>
   	</div>
@@ -14,10 +14,10 @@
 	
 	<div class="list-group" x-ui-scroll-bottom="bottomReached()">
     	<div class="list-group">
-        	<a class="list-group-item"  x-ng-href="#/items/{{item.id}}" 
+        	<a class="list-group-item"  x-ng-href="" 
         		x-ng-repeat="item in items">
-	        		{{ item.name }} - &#8377; {{ item.value | number }} 
-	        		<i class="fa fa-chevron-right pull-right"></i>
+        		{{ item.code }} - {{ item.name }} - {{ item.status }} 
+        		<i class="fa fa-chevron-right pull-right"></i>
         	</a>
       	</div>
 	</div>
