--- a/src/main/webapp/modules/employee/m.html
+++ b/src/main/webapp/modules/employee/m.html
@@ -3,13 +3,25 @@
 </div>
 
 <div class="scrollable">
-<div class="scrollable-content">
-  
-	<div class="list-group text-center">
-    	<div class="list-group-item list-group-item-home">
-        	<h1>customers coming soon!</h1>
-      	</div>  
-	</div>
 
+  	<div class="section scrollable-header">
+  		<a href="" class="btn btn-default pull-right">
+  			<i class="fa fa-plus"></i> New
+  		</a>
+  	</div>
+
+<div class="scrollable-content">
+	
+	<div class="list-group" x-ui-scroll-bottom="bottomReached()">
+    	<div class="list-group">
+        	<a class="list-group-item"  x-ng-href="" 
+        		x-ng-repeat="item in items">
+        		{{ item.id }} - {{ item.firstName }} - {{ item.status }} 
+        		<i class="fa fa-chevron-right pull-right"></i>
+        	</a>
+      	</div>
+	</div>
+	
 </div>
+
 </div>
