updating latest changes...

--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -87,6 +87,7 @@
 <script type="text/javascript" src="modules/agency/agencyController.js"></script>
 <script type="text/javascript" src="modules/account/accountController.js"></script>
 <script type="text/javascript" src="modules/item/itemController.js"></script>
+<script type="text/javascript" src="modules/stock/stockController.js"></script>
 <script type="text/javascript" src="modules/employee/employeeController.js"></script>
 <script type="text/javascript" src="modules/dealer/dealerController.js"></script>
 <script type="text/javascript" src="modules/customer/customerController.js"></script>
