--- a/src/main/webapp/index-m.html
+++ b/src/main/webapp/index-m.html
@@ -21,10 +21,11 @@
 		class="sidebar sidebar-left" 
 		ui-track-as-search-param="true">
 	</div>
+	<!-- 
 	<div x-ng-include="'modules/zgeneral/sideBarRight-m.html'" 
 		class="sidebar sidebar-right">
 	</div>
-	
+	-->
 	<div class="app">
 		
 		<div x-ng-include="'modules/zgeneral/headerNavigatorDirective-m.html'"></div>
@@ -81,6 +82,7 @@
 
 <script type="text/javascript" src="modules/account/accountController.js"></script>
 <script type="text/javascript" src="modules/item/itemController.js"></script>
+<script type="text/javascript" src="modules/stock/stockController.js"></script>
 <script type="text/javascript" src="modules/employee/employeeController.js"></script>
 <script type="text/javascript" src="modules/dealer/dealerController.js"></script>
 <script type="text/javascript" src="modules/customer/customerController.js"></script>
