--- a/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
@@ -14,6 +14,16 @@
 			</a>
 		</li>	
 		<li class="list-group-item">
+			<a href="" x-ng-click="routeTo($event, '/stocks')">
+				Stocks
+			</a>
+		</li>	
+		<li class="list-group-item">
+			<a href="" x-ng-click="routeTo($event, '/items')">
+				Products
+			</a>
+		</li>	
+		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/customers')"> 
 				Customers
 			</a>
@@ -26,11 +36,6 @@
 		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/employees')"> 
 				Employees
-			</a>
-		</li>	
-		<li class="list-group-item">
-			<a href="" x-ng-click="routeTo($event, '/items')">
-				Items
 			</a>
 		</li>	
 		<li class="list-group-item">
