--- a/src/main/webapp/modules/zgeneral/sideBarLeft-m.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-m.html
@@ -21,10 +21,18 @@
 					<i class="fa fa-cog"></i>
 				</a><br/>
 				{{sessionContext.sessionUser.id}} / {{sessionContext.sessionUser.roleId}}
+				<a class="pull-right" href="#/signout">
+					<i class="fa fa-sign-out pull-right"></i>
+				</a><br/>
 			</div>
+			<!-- 
         	<a class="list-group-item" href="#/home">
         		Home <i class="fa fa-home pull-right"></i>
         	</a>
+        	-->
+			<a class="list-group-item" href="#/stocks">
+				Stocks <i class="fa fa-database pull-right"></i>
+			</a>
 			<a class="list-group-item" href="#/items">
 				Products <i class="fa fa-database pull-right"></i>
 			</a>
@@ -37,6 +45,7 @@
         	<a class="list-group-item" href="#/customerTrans">
         		Customer Transactions <i class="fa fa-history pull-right"></i>
         	</a>
+        	<!-- 
 			<a class="list-group-item" href="#/dealers">
 				Dealers <i class="fa fa-users pull-right"></i>
 			</a>
@@ -55,6 +64,7 @@
 			<a class="list-group-item" href="#/employees">
 				Employees <i class="fa fa-users pull-right"></i>
 			</a>
+			-->
 			<a class="list-group-item" href="#/signout">
 				Sign Out <i class="fa fa-sign-out pull-right"></i>
 			</a>
