updating latest changes...

--- a/src/main/webapp/index-m.html
+++ b/src/main/webapp/index-m.html
@@ -86,6 +86,8 @@
 <script type="text/javascript" src="modules/employee/employeeController.js"></script>
 <script type="text/javascript" src="modules/dealer/dealerController.js"></script>
 <script type="text/javascript" src="modules/customer/customerController.js"></script>
+<script type="text/javascript" src="modules/customerOrder/customerOrderController.js"></script>
+<script type="text/javascript" src="modules/customerTran/customerTranController.js"></script>
 
 <script type="text/javascript" src="modules/home/indexController.js"></script>
 
