--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -91,6 +91,8 @@
 <script type="text/javascript" src="modules/employee/employeeController.js"></script>
 <script type="text/javascript" src="modules/dealer/dealerController.js"></script>
 <script type="text/javascript" src="modules/customer/customerController.js"></script>
+<script type="text/javascript" src="modules/customerOrder/customerOrderController.js"></script>
+<script type="text/javascript" src="modules/customerTran/customerTranController.js"></script>
 
 <script type="text/javascript" src="modules/user/userService.js"></script>
 <script type="text/javascript" src="modules/user/userController.js"></script>
