--- a/src/main/webapp/index-g.html
+++ b/src/main/webapp/index-g.html
@@ -24,27 +24,27 @@
 		<strong>WatchYourSales Console</strong>
 	</div>
 	<div class="col-md-10 text-center">
-		<a href="index-d.html" class="btn btn-primary">Destop/Tablet</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="index-m.html" class="btn btn-primary">Tablet/Mobile</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="_ah/admin/" class="btn btn-default">Google Datastore</a>
+		&nbsp;&nbsp;
+		<a href="index-m.html" class="btn btn-default">Tablet/Mobile</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="index-d.html" class="btn btn-default">Destop/Tablet</a>
+		&nbsp;&nbsp;
 		<button class="btn btn-default"
 			x-ng-click="execute('/ping')">Ping</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
 		<button class="btn btn-default"
 			x-ng-click="execute('/info')">Info</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
 		<button class="btn btn-default"
 			x-ng-click="execute('/sessions/properties')">Session Properties</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
 		<button class="btn btn-default" 
 			x-ng-click="execute('/system/reset')">Reset</button> 
-		&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
 		<button class="btn btn-default"
 			x-ng-click="execute('/system/clear')">Clear</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
 		<button class="btn btn-default"
 			x-ng-click="execute('/system/clearTransactions')">Clear Transactions</button>
 	</div>
