updating latest changes...

--- a/src/main/webapp/modules/agency/d.html
+++ b/src/main/webapp/modules/agency/d.html
@@ -51,7 +51,8 @@
 	</tr>
 	<tr x-ng-repeat-end>	
 		<td colspan="7" class="text-center">
-			<a x-ng-href="#/agencys/{{item.id}}/items">Items</a> | 
+			<a x-ng-href="#/agencys/{{item.id}}/products">Products</a> | 
+			<a x-ng-href="#/agencys/{{item.id}}/stocks">Stocks</a> | 
 			<a x-ng-href="#/agencys/{{item.id}}/employees">Employees</a> | 
 			<a x-ng-href="#/agencys/{{item.id}}/dealers">Dealers</a> |
 			<a x-ng-href="#/agencys/{{item.id}}/customers">Customers</a> |
