--- a/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
+++ b/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
@@ -7,7 +7,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="index.html">WatchYourSales</a>
+		<a class="navbar-brand" href="index-d.html">WatchYourSales</a>
 	</div>
 	<div class="navbar-collapse collapse">
 		<form class="navbar-form navbar-left" x-ng-show="isLoggedIn">
