--- a/src/main/webapp/modules/stock/d.html
+++ b/src/main/webapp/modules/stock/d.html
@@ -35,10 +35,10 @@
 			{{item.id}}
 		</td>
 		<td>
-			{{productsMap[item.itemId].code}}
+			{{productsMap[item.productId].code}}
 		</td>
 		<td>
-			{{productsMap[item.itemId].name}}
+			{{productsMap[item.productId].name}}
 		</td>
 		<td class="text-right">
 			{{item.handStock | number : 2}}
