updating latest changes...

--- a/src/main/webapp/modules/agency/d-products.html
+++ b/src/main/webapp/modules/agency/d-products.html
@@ -67,11 +67,11 @@
 	</tr>
 	<tr x-ng-repeat-end>	
 		<td colspan="11" class="text-center">
-			<a x-ng-href="#/agencys/{{item.agencyId}}/items/{{item.id}}/stocks">Stocks</a> |  
-			<a x-ng-href="#/agencys/{{item.agencyId}}/items/{{item.id}}/dealerOrders">Dealer Orders</a> | 
-			<a x-ng-href="#/agencys/{{item.agencyId}}/items/{{item.id}}/dealerTrans">Dealer Transactions</a> |
-			<a x-ng-href="#/agencys/{{item.agencyId}}/items/{{item.id}}/customerOrders">Customer Orders</a> |
-			<a x-ng-href="#/agencys/{{item.agencyId}}/items/{{item.id}}/customerTrans">Customer Transactions</a> 
+			<a x-ng-href="#/agencys/{{item.agencyId}}/products/{{item.id}}/stocks">Stocks</a> |  
+			<a x-ng-href="#/agencys/{{item.agencyId}}/products/{{item.id}}/dealerOrders">Dealer Orders</a> | 
+			<a x-ng-href="#/agencys/{{item.agencyId}}/products/{{item.id}}/dealerTrans">Dealer Transactions</a> |
+			<a x-ng-href="#/agencys/{{item.agencyId}}/products/{{item.id}}/customerOrders">Customer Orders</a> |
+			<a x-ng-href="#/agencys/{{item.agencyId}}/products/{{item.id}}/customerTrans">Customer Transactions</a> 
 		</td>	
 	</tr>
 	</tbody>
