--- a/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
@@ -13,7 +13,7 @@
 				<i class="fa fa-home"></i> Home
 			</a>
 		</li>	
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
 			<a href="" x-ng-click="routeTo($event, '/products')">
 				Products
 			</a>
@@ -21,12 +21,12 @@
 				Stocks
 			</a>
 		</li>	
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
 			<a href="" x-ng-click="routeTo($event, '/customers')"> 
 				Customers
 			</a>
 		</li>	
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
 				Customer &nbsp;&nbsp;
 			<a href="" x-ng-click="routeTo($event, '/customerOrders')"> 
 				Orders
@@ -35,12 +35,12 @@
 				Transactions
 			</a>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
 			<a href="" x-ng-click="routeTo($event, '/dealers')"> 
 				Dealers
 			</a>
 		</li>	
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
 				Dealer &nbsp;&nbsp;
 			<a href="" x-ng-click="routeTo($event, '/dealerOrders')"> 
 			 	Orders
@@ -49,12 +49,12 @@
 				Transactions
 			</a>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-hide="sessionContext.sessionUser.isAppUser">
 			<a href="" x-ng-click="routeTo($event, '/employees')"> 
 				Employees
 			</a>
 		</li>	
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-show="sessionContext.sessionUser.isAppUser">
 			<a href="" x-ng-click="routeTo($event, '/accounts')"> 
 				Accounts
 			</a>
@@ -64,11 +64,13 @@
 			</a>
 			-->
 		</li>	
-		<li class="list-group-item">
+		<li class="list-group-item" x-ng-show="sessionContext.sessionUser.isAppUser">
 			<a href="" x-ng-click="routeTo($event, '/users')">
 				Users
 			</a>
-			<a href="" x-ng-click="routeTo($event, '/agencys')" class="pull-right">
+		</li>	
+		<li class="list-group-item" x-ng-show="sessionContext.sessionUser.isAppUser">
+			<a href="" x-ng-click="routeTo($event, '/agencys')">
 				Agencys
 			</a>
 		</li>	
