updating latest changes...

--- a/src/main/webapp/index-g.html
+++ b/src/main/webapp/index-g.html
@@ -138,8 +138,8 @@
 	src="assets/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
+<script type="text/javascript" src="modules/zgeneral/wydNotifyByBootstrap.js"></script>
 <script type="text/javascript" src="modules/home/indexController.js"></script>
-
 <script type="text/javascript" src="modules/common.js"></script>
 <script type="text/javascript" src="modules/main-g.js"></script>
 
