--- a/src/main/webapp/modules/product/m.html
+++ b/src/main/webapp/modules/product/m.html
@@ -5,9 +5,12 @@
 <div class="scrollable">
 
   	<div class="section scrollable-header">
+  		search comming soon...
+  		<!-- 
   		<a href="" class="btn btn-default pull-right">
   			<i class="fa fa-plus"></i> New
   		</a>
+  		-->
   	</div>
 
 <div class="scrollable-content">
