--- a/src/main/webapp/index-m.html
+++ b/src/main/webapp/index-m.html
@@ -2,6 +2,7 @@
 <head>
 
 <title>WatchYourSales</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 <!-- Makes your prototype chrome-less once bookmarked to your phone's home screen -->
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -10,23 +11,27 @@
 <link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
 
-<link rel="stylesheet" href="assets/maui/css/mobile-angular-ui-hover.css" />
-<link rel="stylesheet" href="assets/maui/css/mobile-angular-ui-base.css" />
-<link rel="stylesheet" href="assets/maui/css/mobile-angular-ui-desktop.css" />
+<link rel="stylesheet" href="assets/maui/css/mobile-angular-ui-hover.min.css" />
+<link rel="stylesheet" href="assets/maui/css/mobile-angular-ui-base.min.css" />
+<link rel="stylesheet" href="assets/maui/css/mobile-angular-ui-desktop.min.css" />
     
 </head>
 <body x-ng-clock>
 
+	<bootstrap-notify-directive></bootstrap-notify-directive>
+
 	<div x-ng-include="'modules/zgeneral/sideBarLeft-m.html'" 
 		class="sidebar sidebar-left" 
-		ui-track-as-search-param="true">
+		x-ui-track-as-search-param="true">
 	</div>
 	<!-- 
 	<div x-ng-include="'modules/zgeneral/sideBarRight-m.html'" 
 		class="sidebar sidebar-right">
 	</div>
 	-->
-	<div class="app">
+	<div class="app" 
+		x-ui-swipe-right='Ui.turnOn("uiSidebarLeft")'
+        x-ui-swipe-left='Ui.turnOff("uiSidebarLeft")'>
 		
 		<div x-ng-include="'modules/zgeneral/headerNavigatorDirective-m.html'"></div>
 	
@@ -42,6 +47,8 @@
 		<div x-ng-include="'modules/zgeneral/footerNavigatorDirective-m.html'"></div>
 		
 	</div>
+
+	<div x-ui-yield-to="modals"></div>
 
 <script type="text/javascript"
 	src="assets/lib/lodash.min.js"></script>
@@ -68,7 +75,9 @@
 
 <script type="text/javascript" 
  	src="assets/maui/js/mobile-angular-ui.min.js"></script>
-
+<script type="text/javascript" 
+	src="assets/maui/js/mobile-angular-ui.gestures.min.js"></script>
+	
 <script type="text/javascript"
 	src='assets/ui-select/select.min.js'></script>
 <script type="text/javascript" 
@@ -77,6 +86,7 @@
 	src="assets/inputmask/green.inputmask4angular.js"></script>
 	
 <script type="text/javascript" src="modules/init.js"></script>
+<script type="text/javascript" src="modules/zgeneral/wydNotifyByMaui.js"></script>
 
 <script type="text/javascript" src="modules/session/sessionService.js"></script>
 
@@ -95,7 +105,7 @@
 
 <script type="text/javascript" src="modules/session/settingController.js"></script>
 
-<script type="text/javascript" src="modules/session/loginController-m.js"></script>
+<script type="text/javascript" src="modules/session/loginController.js"></script>
 <script type="text/javascript" src="modules/session/logoutController.js"></script>
 
 <script type="text/javascript" src="modules/common.js"></script>
