--- a/src/main/webapp/modules/zgeneral/bootstrapNotifyDirective.html
+++ b/src/main/webapp/modules/zgeneral/bootstrapNotifyDirective.html
@@ -1,5 +1,5 @@
 <div class="alerts alert-fixed-top">
-	<div class="alert" x-ng-repeat="alert in notifyService.alerts"
+	<div class="text-center alert" x-ng-repeat="alert in notifyService.alerts"
 x-ng-class="{ 'alert-success': alert.success, 'alert-info': alert.info, 'alert-warning': alert.warning,'alert-danger': alert.error}">
 		<button type="button" class="close" x-dismiss="alert"
 			x-ng-click="notifyService.remove(alert)">
