updating latest changes...

--- a/src/main/webapp/modules/zgeneral/sideBarRight-m.html
+++ b/src/main/webapp/modules/zgeneral/sideBarRight-m.html
@@ -1,7 +1,42 @@
 <div class="scrollable">
-   	<div class="scrollable-content">
+	
+	<h2 class="scrollable-header app-name">Cash &amp; Stocks</h2>
+	
+   	<div class="scrollable-content section">
 	   	<div class="list-group" x-ui-toggle="uiSidebarRight">
-			comming soon...
+
+		   	<div class="list-group-item">
+				<h4>Mine</h4>
+				<h5>Cash In Hand : </h5>
+				<div>
+					<code>{{0 | number : 2}}</code>
+				</div>
+			   	<div>
+					<h5>Stock Worth : </h5>
+					<div><code>{{0 | number : 2}}</code></div>
+				</div>
+			   	<div>
+					<h5>Total : </h5>
+					<div><code>{{0 | number : 2}}</code></div>
+				</div>
+			</div>
+						
+		   	<div class="list-group-item">
+				<h4>Agency</h4>
+				<h5>Cash In Hand : </h5>
+				<div>
+					<code>{{0 | number : 2}}</code>
+				</div>
+			   	<div>
+					<h5>Stock Worth : </h5>
+					<div><code>{{0 | number : 2}}</code></div>
+				</div>
+			   	<div>
+					<h5>Total : </h5>
+					<div><code>{{0 | number : 2}}</code></div>
+				</div>
+			</div>
+	   	
 		</div>	
 	</div>
 </div>
