--- a/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
+++ b/src/main/webapp/modules/zgeneral/headerNavigatorDirective-d.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" 
 			x-toggle="collapse" x-target=".navbar-inverse-collapse"">
@@ -18,6 +19,18 @@
 		<ul class="nav navbar-nav">
 			<li><a x-ng-href="#{{homeView}}"><i class="fa fa-home"></i> Home</a></li>
 		</ul>
+		<div class="nav navbar-nav" x-ng-show="isLoggedIn">
+			<div style="margin : 5px 0">
+				Agency Cash In Hand : <code>{{0 | number : 2}}</code>
+				Stock Worth : <code>{{0 | number : 2}}</code>
+				Total : <code>{{0 | number : 2}}</code>
+			</div>
+			<div>
+				Mine Cash In Hand&nbsp;&nbsp;&nbsp;&nbsp; : <code>{{0 | number : 2}}</code>
+				Stock Worth : <code>{{0 | number : 2}}</code>
+				Total : <code>{{0 | number : 2}}</code>
+			</div>
+		</div>
 		<ul class="nav navbar-nav navbar-right" x-ng-hide="isLoggedIn">
 			<li><a href="#/signin"><i class="fa fa-sign-in"></i> Login</a></li>
 		</ul>
@@ -25,11 +38,6 @@
 			<li><a href="#/settings"><i class="fa fa-cog"></i> Settings</a></li>
 			<li><a href="#/signout"><i class="fa fa-sign-out"></i> Logout</a></li>
 		</ul>
-		<form class="navbar-form navbar-right" x-ng-show="isLoggedIn">
-			<button class="btn btn-default" x-ng-disabled="true" 
-				x-ng-click="showNotifications()">
-				<i class="fa fa-bell"></i> &nbsp;
-			</button>
-		</form>
 	</div>
+
 </div>
