--- a/src/main/webapp/modules/zgeneral/headerNavigatorDirective-m.html
+++ b/src/main/webapp/modules/zgeneral/headerNavigatorDirective-m.html
@@ -7,11 +7,10 @@
         	<i class="fa fa-bars"></i> Menu
        	</div>
 	</div>
-	<!-- 
-    <div class="btn-group pull-right" ui-yield-to="navbarAction" x-ng-show="isLoggedIn">
+    <div class="btn-group pull-right" x-ui-yield-to="navbarAction" 
+    	x-ng-show="isLoggedIn">
     	<div x-ui-toggle="uiSidebarRight" class="btn">
-       		<i class="fa fa-bell"></i> Messages
+       		Cash &amp; Stock
     	</div>
     </div>
-    -->
 </div>
