--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -28,21 +28,22 @@
 	<x-header-navigator-directive></x-header-navigator-directive>
 	<hr style="margin : 3px 0"/>
 	<x-bread-crumb-directive></x-bread-crumb-directive>
-
 </header>
 
 <bootstrap-notify-directive></bootstrap-notify-directive>
 
-<section class="container-fluid" x-ng-view></section>
-
-<footer class="navbar navbar-default navbar-fixed-bottom" x-role="navigation">
+<section class="container-fluid">
+	<div class="container-fluid" x-ng-view></div>
+	<br/><br/><br/>
+</section>
+<div class="navbar navbar-default navbar-fixed-bottom" x-role="navigation">
 	<!-- 
 	<x-footer-bar-directive></x-footer-bar-directive>
 	<hr style="margin : 5px 0">
 	-->
 	<br/>
 	<x-footer-navigator-directive></x-footer-navigator-directive>
-</footer>
+</div>
 
 <script type="text/javascript"
 	src="assets/lib/lodash.min.js"></script>
