updating latest changes...

--- a/src/main/webapp/index-g.html
+++ b/src/main/webapp/index-g.html
@@ -19,7 +19,7 @@
 
 <br/>
 
-<div>
+<div class="row">
 	<div class="col-md-2 text-center">
 		<strong>WatchYourSales Console</strong>
 	</div>
@@ -50,7 +50,7 @@
 	</div>
 </div>
 
-<br/><hr/>
+<hr/>
 
 <div>
 	<div class="col-md-6">
@@ -113,10 +113,6 @@
 
 <script type="text/javascript"
 	src="assets/lib/lodash.min.js"></script>
-<!-- 
-<script type="text/javascript"
-	src="assets/lib/underscore.string.min.js"></script>
--->	
 <script type="text/javascript" 
 	src="assets/lib/moment.min.js"></script>
 <script type="text/javascript" 
