updating latest changes...

--- a/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
+++ b/src/main/webapp/modules/zgeneral/sideBarLeft-d.html
@@ -54,7 +54,7 @@
 				Employees
 			</a>
 		</li>	
-		<li class="list-group-item" x-ng-show="sessionContext.sessionUser.isAppUser">
+		<li class="list-group-item">
 			<a href="" x-ng-click="routeTo($event, '/accounts')"> 
 				Accounts
 			</a>
