--- a/src/main/webapp/index-d.html
+++ b/src/main/webapp/index-d.html
@@ -81,17 +81,29 @@
 <script type="text/javascript" src="modules/session/sessionService.js"></script>
 
 <script type="text/javascript" src="modules/agency/agencyService.js"></script>
-
 <script type="text/javascript" src="modules/agency/agencyController.js"></script>
+
 <script type="text/javascript" src="modules/account/accountController.js"></script>
+
+<script type="text/javascript" src="modules/product/productService.js"></script>
 <script type="text/javascript" src="modules/product/productController.js"></script>
+
+<script type="text/javascript" src="modules/stock/stockService.js"></script>
 <script type="text/javascript" src="modules/stock/stockController.js"></script>
+
+<script type="text/javascript" src="modules/employee/employeeService.js"></script>
 <script type="text/javascript" src="modules/employee/employeeController.js"></script>
+
 <script type="text/javascript" src="modules/dealer/dealerController.js"></script>
+
 <script type="text/javascript" src="modules/dealerOrder/dealerOrderController.js"></script>
+
 <script type="text/javascript" src="modules/dealerTran/dealerTranController.js"></script>
+
 <script type="text/javascript" src="modules/customer/customerController.js"></script>
+
 <script type="text/javascript" src="modules/customerOrder/customerOrderController.js"></script>
+
 <script type="text/javascript" src="modules/customerTran/customerTranController.js"></script>
 
 <script type="text/javascript" src="modules/user/userService.js"></script>
