--- a/src/main/webapp/modules/stock/d.html
+++ b/src/main/webapp/modules/stock/d.html
@@ -13,13 +13,10 @@
 	<thead>
 	<tr>
 		<th class="text-right" width="30">#</th>
-		<th class="text-center"><small>Id</small></th>
 	   	<th class="text-center"><small>Code</small></th>
 	   	<th class="text-center"><small>Name</small></th>
-	   	<th class="text-center"><small>Stock In Hand</small></th>
-	   	<th class="text-center"><small>Stock In Move</small></th>
-	   	<th class="text-center"><small>Total Stock</small></th>
-	   	<th class="text-center"><small>Average</small></th>
+	   	<th class="text-center"><small>Hand Stock</small></th>
+	   	<th class="text-center"><small>Hand Average</small></th>
 	   	<th class="text-center"><small>Order Buy</small></th>
 	   	<th class="text-center"><small>Order Average</small></th>
 	   	<th class="text-center"><small>Order Sell</small></th>
@@ -32,9 +29,6 @@
 			{{$index+1}}
 		</td>
 		<td>
-			{{item.id}}
-		</td>
-		<td>
 			{{productsMap[item.productId].code}}
 		</td>
 		<td>
@@ -44,19 +38,13 @@
 			{{item.handStock | number : 2}}
 		</td>
 		<td class="text-right">
-			{{item.handStockMove | number : 2}}
-		</td>
-		<td class="text-right">
-			{{item.handStockTotal | number : 2}}
-		</td>
-		<td class="text-right">
-			{{item.handStockAverage | number : 5}}
+			{{productsMap[item.productId].handStockAverage | number : 5}}
 		</td>	
 		<td class="text-right">
 			{{item.virtualStockBuy | number : 2}}
 		</td>
 		<td class="text-right">
-			{{item.virtualStockAverage | number : 5}}
+			{{productsMap[item.productId].virtualStockAverage | number : 5}}
 		</td>
 		<td class="text-right">
 			{{item.virtualStockSell | number : 2}}
