--- a/src/main/webapp/modules/customerTran/d.html
+++ b/src/main/webapp/modules/customerTran/d.html
@@ -1,2 +1,70 @@
 <br/>
-customer transactions coming soon...
+<div class="panel panel-default">
+	<div class="panel-heading text-center">
+		<span class="pull-left">
+			<button	class="btn btn-default"	x-ng-disabled="items.length == 0"
+				x-ng-click="refresh()">
+				<i class="fa fa-refresh"></i>
+			</button>
+		</span>
+		&nbsp;
+	</div>
+	<table class="table table-condensed table-bordered table-striped">
+	<thead>
+	<tr>
+		<th class="text-right" width="30">Id</th>
+	   	<th class="text-center"><small>Code</small></th>
+	   	<th class="text-center"><small>Name</small></th>
+	   	<th class="text-center"><small>Type</small></th>
+	   	<th class="text-center"><small>Unit</small></th>
+	   	<th class="text-center"><small>Rate</small></th>
+	   	<th class="text-center"><small>Amount</small></th>
+	   	<th class="text-center"><small>Date</small></th>
+	   	<th class="text-center"><small>&nbsp;</small></th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr x-ng-repeat="item in items">
+		<td class="text-right" width="40">
+			{{$index+1}}
+		</td>
+		<td>
+			{{item.productCode}}
+		</td>
+		<td>
+			-
+		</td>
+		<td class="text-center">
+			{{item.type}}
+		</td>
+		<td class="text-right">
+			{{item.unit | number : 2}}
+		</td>
+		<td class="text-right">
+			{{item.rate | number : 5}}
+		</td>	
+		<td class="text-right">
+			{{item.unit * item.rate | number : 2}}
+		</td>
+		<td width="160">
+			{{item.date | date:'yyyy-MM-dd HH:mm:ss'}}
+		</td>
+		<td>
+			&nbsp;
+		</td>
+	</tr>
+	</tbody>
+	<tfoot x-ng-show="searchResults.hasItems">
+	<tr>
+		<td>&nbsp;</td>
+		<td colspan="6">
+			<buttton class="btn btn-info btn-block"	
+				x-ng-click="loadMore()">
+				Load More
+			</buttton>
+		</td>
+		<td>&nbsp;</td>
+	</tr>	
+	</tfoot>
+	</table>
+</div>
